# error-buddy-ai-agent

./: .gitignore  README.md  pip_config.sh
cloudrun-llm-image/: Dockerfile.gemma.3.1b  Dockerfile.llama.3.2.1b  README.md
cloudrun-llm-image/scripts/: .env.sample  build.gemma.m1.sh  build.gemma.sh  build.llama.m1..sh  build.llama.sh  entrypoint.gemma.sh  entrypoint.llama.sh
cloudrun-python-image/: Dockerfile
cloudrun-python-image/scripts/: build.base.python.m1.sh  build.base.python.sh
error-agent/: README.md
fastapi-demo-service/: README.md  pyproject.toml  requirements.txt
fastapi-demo-service/.devcontainer/: devcontainer.json
fastapi-demo-service/app/: __init__.py  config.py  main.py
fastapi-demo-service/app/endpoints/: __init__.py  errors.py
fastapi-demo-service/deployment/: Dockerfile  Dockerfile.local
fastapi-demo-service/deployment/scripts/: build.sh
log-router/: Dockerfile  README.md  main.py  pyproject.toml
log-router/deployment/: build.sh
log-router/log_router/core/: chat.py
log-router/log_router/services/: error_classifier.py
prompt-evaluator/: README.md
python-app/: README.md
