[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-demo-service"
version = "0.1.0"
description = "FastAPI service for error handling"
dependencies = [
    "fastapi[standard]==0.116.1",
    "uvicorn==0.35.0",
]
requires-python = ">=3.8"

[tool.setuptools]
packages = ["app"]
